--- a/LifeShare/appsettings.json
+++ b/LifeShare/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conexao" : "Server=tcp:sqlserver-profkarlos.database.windows.net,1433;Initial Catalog=dimdimdb;Persist Security Info=False;User ID=admsql;Password=devops@Fiap2tds;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"   
+    "conexao" : "Server=tcp:server-sql-iasi.database.windows.net,1433;Initial Catalog=banco_iasi_cp2;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   }
 }
